Se agregan imagenes de los integrantes para la pagina de acercade.html

--- a/acercade.html
+++ b/acercade.html
@@ -50,28 +50,161 @@
             <div class="col-acercade1 col-xs-12 col-sm-6 info">
                 <div class="text-acercade">
                     <p class="text-justify">
-                        Adagio Gitano es una agrupación de Costa Rica desde el 2014 cuando <strong>José Fuentes</strong> y <strong>Manuel Illescas</strong> ambos guitarristas se unen para crear una agrupación experimental y instrumental con la participación de <strong>Gabriel Villavicencio</strong> bajista y <strong>Carlos Jimenez</strong> percusionista.
-                    </p>
-                    <p class="text-justify">
-                        Inicialmente se trabaja con ritmos latinoamericanos como choro, pero también se logran integrar conceptos como funk, blues, bossa-nova, tango los cuales dieron lugar a la música original para promocionar sus inicios.
+                        La idea de formar un grupo surge a mediados del año 2014, cuando <strong>Jose Fuentes</strong> y
+                        <strong>Manuel Illescas</strong> deciden iniciar un proyecto de música que fusionara distintos géneros,
+                        para ello contactan a <strong>Carlos Jiménez</strong> y <strong>Gabriel Villavicencio</strong>, que se incorporan en el
+                        grupo cuyo nombre queda decidido como Adagio Gitano. Inicialmente se trabaja con
+                        ritmos latinoamericanos, pero también se logran integrar conceptos como funk, blues,
+                        bossa-nova y tango, los cuales dieron lugar a música original instrumental en sus inicios.
                     </p>
                 </div>
             </div>
             <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
-                <img src="images/origen.jpg" alt="Adagio Gitano" class="img-responsive image-acerca" />
+                <img src="images/origen.jpg" alt="Inicio Adagio Gitano" class="img-responsive image-acerca" />
             </div>
         </div>
         <div class="row">
             <div class="col-acercade2 col-xs-12">
                 <div class="text-acercade1">
                     <p class="text-justify">
-                        Luego en agosto del año 2015 se cambió un poco la dinámica del grupo con la voz de <strong>Yanelly Ramírez</strong> con el fin de tocar covers latinoamericanos y seguir promocionando la música instrumental original. Después de varios eventos se llegan a la conclusión de que la participación de Yanelly Ramírez tiene un impacto importante en la agrupación y debido a esto se integra como la voz principal.
+                        Posteriormente se dan una serie de movimientos en el grupo, la salida de Manuel
+                        Illescas y la llegada de <strong>Jair Sherrier</strong> en la guitarra y de <strong>Yanelly Ramírez</strong> como vocalista,
+                        iniciando con covers latinoamericanos mientras, a la vez, se seguía promocionando la
+                        música instrumental original                       
                     </p>
                     <p class="text-justify">
-                        Luego en setiembre del 2016 el guitarrista <strong>Manuel Illescas</strong> informa sobre su partida de la agrupación Adagio Gitano para concentrarse en otros proyectos lo cual deja un espacio faltante en la agrupación y en la cual se considera la inclusión de un nuevo guitarrista. A las pocas semanas el guitarrista José Fuentes se encuentra con una antigua amistad <strong>Jair Sherrier</strong> el cual le propone ser el nuevo guitarrista de la agrupación y después de una respuesta afirmativa llega a completar la alineación de la agrupación.
+                        <h3>¿Por qué Adagio Gitano? </h3>
+
+                        Adagio (del italiano) es un término musical que hace referencia a una indicación de
+                        tempo, o bien a un movimiento de una pieza musical. Adagio Gitano maneja muchos de
+                        los tempos que se manejan en las canciones se encuentran en Adagio, de esta forma
+                        surge y se mantiene el nombre.
                     </p>
                 </div>
             </div>
+        </div>
+        <div class="row">
+            <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
+                <img src="images/Integrantes/Jose.png" class="img-responsive image-acerca1" alt="José" />
+            </div>
+            <div class="col-acercade1 col-xs-12 col-sm-6 info">
+                <div class="text-acercade">
+                    <p class="text-justify">
+                        <strong>1. Jose Fuentes: Guitarrista</strong>
+                    </p>
+                    <p>
+                        Guitarrista clásico graduado de la Universidad de
+                        Costa Rica. Educador musical y arreglista en la
+                        agrupación Adagio Gitano. Con experiencia
+                        como solista clásico y con el guitarrista checo
+                        Pavel Stedil y trío de jazz André Jaune.
+                        Presentaciones como solista en Italia, Hungría y
+                        México
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-acercade1 col-xs-12 col-sm-6 info">
+                <div class="text-acercade">
+                    <p class="text-justify">
+                        <strong>2. Carlos Jiménez: Percusionista</strong>
+                    </p>
+                    <p>
+                        Su amor por la música y su interés por los instrumentos musicales existe desde su niñez.
+                        En específico el área de la percusión inició desde
+                        pequeño formando parte cada año de las bandas
+                        que desfilan en las celebraciones de cada 15 de
+                        septiembre. Sin embargo fue hasta 2009 que se
+                        involucré más a fondo con el mundo de la
+                        percusión, primero con la batería,
+                        posteriormente timbal y cajón peruano. Inició en
+                        clases con el maestro Ronald. Desde el 2010
+                        hasta hoy, él lo ha ayudado a desarrollar su
+                        sonido. Realmente todos los géneros musicales
+                        son de suagrado, no obstante tiene una inclinación especial por los ritmos latinos y
+                        sonidos funk.
+                    </p>
+                </div>
+            </div>
+            <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
+                <img src="images/Integrantes/Carlos.png" class="img-responsive image-acerca1" alt="Carlos" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
+                <img src="images/Integrantes/Jair.png" class="img-responsive image-acerca1" alt="Jair" />
+            </div>
+            <div class="col-acercade1 col-xs-12 col-sm-6 info">
+                <div class="text-acercade">
+                    <p class="text-justify">
+                        <strong>3. Jair Sherrier: Guitarrista/Vocalista</strong>
+                    </p>
+                    <p class="text-justify">
+                        Estudió guitarra clásica, contrabajo, teoría musical, orquestación y composición, pero
+                        creció escuchando Motown, Stax, Rock
+                        Clásico, Soca, Reggae, Ritmos Afrocubanos y
+                        afrocaribeños. Ha dirigido coros, bandas,
+                        escrito y producido para artistas, video, TV, y
+                        teatro; produjo la canción oficial para
+                        una campaña de las FAO de las Naciones
+                        Unidas. Su trabajo se ha escuchado en
+                        Norteamérica, Latinoamérica y en Estaciones
+                        de TV como CNN en español, Univisión,
+                        Telemundo, y en el Festival Internacional de
+                        las Artes de Costa Rica.
+                    </p>
+                </div>
+            </div>            
+        </div>
+        <div class="row">
+            <div class="col-acercade1 col-xs-12 col-sm-6 info">
+                <div class="text-acercade">
+                    <p class="text-justify">
+                        <strong>4. Yanelly Ramírez: Vocalista</strong>
+                    </p>
+                    <p class="text-justify">
+                        Yanelly Ramírez Baltodano ha sido
+                        vocalista desde su infancia, desde
+                        coros estudiantiles hasta
+                        experiencias como solista en
+                        distintos medios musicales.
+                        Guitarrista y compositora empírica. A
+                        partir del 2011 estudió canto con Elsa
+                        Castro, graduada de la Universidad
+                        Nacional de Costa Rica. Vocalista
+                        desde el año 2015 en la agrupación
+                        Adagio Gitano.
+                    </p>
+                </div>
+            </div>
+            <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
+                <img src="images/Integrantes/Yanelly.png" class="img-responsive image-acerca1" alt="Yanelly" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
+                <img src="images/Integrantes/Gabriel.png" alt="Gabriel" class="img-responsive image-acerca1" />
+            </div>
+            <div class="col-acercade1 col-xs-12 col-sm-6 info">
+                <div class="text-acercade">
+                    <p class="text-justify">
+                        <strong>5. Gabriel Villavicencio: Bajista</strong>
+                    </p>
+                    <p class="text-justify">
+                        Gabriel Villavicencio Herrera, estudiante
+                        de bajo eléctrico de Marco Chiqui Ortiz,
+                        contrabajista de la sinfónica y bajista.
+                        Después el 15 de agosto del 2016,
+                        estudió con el curso en línea Bajissimo
+                        del profesor Marco Chiqui Ortiz.
+                        Actualmente estudiante de contrabajo
+                        de Julián Córdoba en la academia musical
+                        de Moravia actualmente estudiante de contrabajo
+                        en la Universidad de Costa Rica.
+                    </p>
+                </div>
+            </div>            
         </div>
         <div class="row">
             <div class="col-acercade3 col-xs-12 hidden-xs">
@@ -91,6 +224,9 @@
                     </li>
                     <li>
                         <a href="https://www.instagram.com/adagio_gitano/" class="ig icono" target="_blank"></a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/channel/UC7lAj9rbe-RMn0ML6EPKGvQ" class="yt icono" target="_blank"></a>
                     </li>
                 </ul>
             </div>
