--- a/contacto.html
+++ b/contacto.html
@@ -52,7 +52,7 @@
                     Correo: adagiogitano4@gmail.com
                 </p>
                 <p class="contacto">
-                    Teléfono: (506)6011-3685
+                    José Fuentes: (506)6011-3685
                 </p>
             </div>
             <div class="col-xs-12 col-sm-6 hidden-xs">
