Se realizan cambios en la pagina de index.html para modificar la descripción que se muestra en las busquedas de los exploradores

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
     <meta name="robots" content="index, follow" />
     <!-- Descripcion de busquedas -->
-    <meta name="description" content="Adagio Gitano es una agrupación Costarricense desde el 2014 con ritmos latinoamericanos como choro, bossa nova, y generos mas reconocidos como lo son el blues, el funk." />    
+    <meta name="description" content="Adagio Gitano es una agrupación Costarricense desde el 2014 con ritmos latinoamericanos y donde se logran integrar conceptos como funk, blues,bossa-nova y tango." />    
 
     <!-- FACEBOOK -->
     <meta property="og:url" content="https://adagiogitano.github.io/index.html" />
