se modifica uno de los eventos en la pagina de index.html y se agregan estilos

--- a/index.html
+++ b/index.html
@@ -155,15 +155,20 @@
         <div class="row">
             <div class="col col-xs-12">
                 <div class="info-evento">
-                    <h3>Rock House Pub</h3>
+                    <h3>Rock House Pub</h3>                    
                     <p>
-                        Fecha: 15/12/2016
+                        Fecha: 15 /12 / 16 - Hora: 8 PM
+                    </p>
+                    <h4>Promociones</h4>
+                    <ol>
+                        <li>Tropper normal a 1800 colones</li>
+                        <li>Trooper edición especial a 2800 colones</li>
+                    </ol>
+                    <p>
+                        <strong> Adicionalmente se rifara un sifón de 5 litros de Trooper </strong>
                     </p>
                     <p>
-                        Hora: 8 PM
-                    </p>
-                    <p>
-                        Dirección: 50 mts oeste del ICE de la Florida Tibás, en Plaza Tibas.
+                        Dirección: 240 mts oeste del ICE de la Florida Tibás, en Plaza Tibas.
                         <a href="https://goo.gl/maps/5PWXgjiiPCv" target="_blank"> Ubicación </a>
                     </p>
                 </div>
