se modifica uno de los eventos.

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <strong> Adicionalmente se rifara un sifón de 5 litros de Trooper </strong>
                     </p>
                     <p>
-                        Dirección: 240 mts oeste del ICE de la Florida Tibás, en Plaza Tibas.
+                        Dirección: 240 mts oeste del ICE de la Florida Tibás, en Plaza Tibás.
                         <a href="https://goo.gl/maps/5PWXgjiiPCv" target="_blank"> Ubicación </a>
                     </p>
                 </div>
