Edición de evento de index.html

--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                     </p>
                     <h4>Promociones</h4>
                     <ol>
-                        <li>Tropper normal a 1800 colones</li>
-                        <li>Trooper edición especial a 2800 colones</li>
+                        <li>Cerveza Tropper normal ₡1800</li>
+                        <li>CervezaTrooper edición especial ₡2800</li>
                     </ol>
                     <p>
                         <strong> Adicionalmente se rifara un sifón de 5 litros de Trooper </strong>
