--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     fjs.parentNode.insertBefore(js, fjs);
                 }(document, 'script', 'facebook-jssdk'));
                 </script>
-                <div class="fb-share-button" data-href="https://www.facebook.com/adagiogitano/" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?src=sdkpreparse">Compartir</a></div>
+                <div class="fb-share-button" data-href="https://adagiogitano.github.io/" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fadagiogitano.github.io%2F&amp;src=sdkpreparse">Compartir</a></div>
             </div>
         </section>
     </footer>
