--- a/multimedia.html
+++ b/multimedia.html
@@ -76,13 +76,13 @@
                     </li>
                     <li>
                         <a href="https://www.instagram.com/adagio_gitano/" class="ig icono" target="_blank"></a>
-                    </li>                    
+                    </li>
                     <li>
                         <a href="https://www.youtube.com/channel/UC7lAj9rbe-RMn0ML6EPKGvQ" class="yt icono" target="_blank"></a>
                     </li>
                 </ul>
             </div>
-             <div class="footer-share">
+            <div class="footer-share">
                 <div id="fb-root"></div>
                 <script>
                 (function(d, s, id) {
@@ -94,7 +94,7 @@
                     fjs.parentNode.insertBefore(js, fjs);
                 }(document, 'script', 'facebook-jssdk'));
                 </script>
-                <div class="fb-share-button" data-href="https://www.facebook.com/adagiogitano/" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?src=sdkpreparse">Compartir</a></div>
+                <div class="fb-share-button" data-href="https://adagiogitano.github.io/" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fadagiogitano.github.io%2F&amp;src=sdkpreparse">Compartir</a></div>
             </div>
         </section>
     </footer>
