--- a/index.html
+++ b/index.html
@@ -118,10 +118,12 @@
         <div class="row">
             <div class="col-xs-12 col">
                 <img src="images/afiches/afichehouse.jpg" alt="Afiche" class="img-responsive">
-                <p>
-                    Dirección: 240 mts oeste del ICE de la Florida Tibás, en Plaza Tibás.
-                    <a href="https://goo.gl/maps/5PWXgjiiPCv" target="_blank"> Ubicación </a>
-                </p>
+                <div class="info-evento">
+                    <p>
+                        Dirección: 240 mts oeste del ICE de la Florida Tibás, en Plaza Tibás.
+                        <a href="https://goo.gl/maps/5PWXgjiiPCv" target="_blank"> Ubicación </a>
+                    </p>
+                </div>                
             </div>
         </div>
     </main>
