se modifica el index para insertar la imagen dependiendo de la vista

--- a/index.html
+++ b/index.html
@@ -117,13 +117,10 @@
         </div>
         <div class="row">
             <div class="col-xs-12 col">
-                <img src="images/afiches/afichehouse.jpg" alt="Afiche" class="img-responsive">
-                <div class="info-evento">
-                    <p>
-                        Dirección: 240 mts oeste del ICE de la Florida Tibás, en Plaza Tibás.
-                        <a href="https://goo.gl/maps/5PWXgjiiPCv" target="_blank"> Ubicación </a>
-                    </p>
-                </div>                
+                <img id="afichehouse" alt="Afiche" class="img-responsive">
+                <p class="text-center">
+                    <a href="https://goo.gl/maps/5PWXgjiiPCv" target="_blank"> Abrir ubicación con google maps </a>
+                </p>
             </div>
         </div>
     </main>
