Se agregan las imagenes dependiendo del dispositivo en uso

--- a/index.html
+++ b/index.html
@@ -116,8 +116,14 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col">
-                <img id="afichehouse" alt="Afiche" class="img-responsive">
+            <div class="col-xs-12 col hidden-lg">
+                <img src="images/afiche/movilhouse.jpg" alt="Afiche House Pub" class="img-responsive">
+                <p class="text-center">
+                    <a href="https://goo.gl/maps/5PWXgjiiPCv" target="_blank"> Abrir ubicación con google maps </a>
+                </p>
+            </div>
+            <div class="hidden-xs hidden-sm hidden-md col col-lg-12">
+                <img src="images/afiche/afichehouse.jpg" alt="Afiche House Pub" class="img-responsive">
                 <p class="text-center">
                     <a href="https://goo.gl/maps/5PWXgjiiPCv" target="_blank"> Abrir ubicación con google maps </a>
                 </p>
