Se modifican los eventos

--- a/index.html
+++ b/index.html
@@ -116,17 +116,14 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col hidden-lg">
-                <img src="images/afiche/movilhouse.jpg" alt="Afiche House Pub" class="img-responsive">
+            <div class="col col-xs-12 col-sm-6">
+                <img src="images/afiche/loscolegios.jpg" alt="Evento los colegios" class="img-responsive afiche">
                 <p class="text-center">
-                    <a href="https://goo.gl/maps/5PWXgjiiPCv" target="_blank"> Abrir ubicación con google maps </a>
+                    <a href="https://goo.gl/maps/9n4ywc8iNnt" target="_blank"> Abrir ubicación con google maps </a>
                 </p>
             </div>
-            <div class="hidden-xs hidden-sm hidden-md col col-lg-12">
-                <img src="images/afiche/afichehouse.jpg" alt="Afiche House Pub" class="img-responsive">
-                <p class="text-center">
-                    <a href="https://goo.gl/maps/5PWXgjiiPCv" target="_blank"> Abrir ubicación con google maps </a>
-                </p>
+            <div class="col col-sm-6 hidden-xs">
+            	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d826.1097355470771!2d-84.06046202746712!3d9.962028918714017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x618e177a943b6a91!2sCentro+Comercial+Plaza+Los+Colegios!5e0!3m2!1ses!2ses!4v1482157835905" frameborder="0" allowfullscreen class="maps"></iframe>
             </div>
         </div>
     </main>
