--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
         </div>
         <div class="row">
             <div class="col col-xs-12 col-sm-6">
-                <img src="images/afiche/loscolegios.jpg" alt="Evento los colegios" class="img-responsive afiche">
-                <p class="text-center">
-                    <a href="https://goo.gl/maps/9n4ywc8iNnt" target="_blank"> Abrir ubicación con google maps </a>
-                </p>
+                <h3>Bar y Restaurane Kandora</h3>
+                <p><strong>Fecha:</strong> 04 de Febrero 2017</p>
+                <p><strong>Hora:</strong> 8 PM</p>
+
             </div>
             <div class="col col-sm-6 hidden-xs">
-            	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d826.1097355470771!2d-84.06046202746712!3d9.962028918714017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x618e177a943b6a91!2sCentro+Comercial+Plaza+Los+Colegios!5e0!3m2!1ses!2ses!4v1482157835905" frameborder="0" allowfullscreen class="maps"></iframe>
+            	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d982.418724435223!2d-84.04923332720327!3d9.960983210333705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e45d40000001%3A0x3f367be812c8568d!2sKandora+Bar!5e0!3m2!1ses!2ses!4v1484617061633" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
         </div>
     </main>
