Se modifica el fondo de todas las paginas, además se modifica la pagina index.html.
Se modifica el acerca de se agrega la imagen Anthony2.jpg, se realizan pruebas.

--- a/acercade.html
+++ b/acercade.html
@@ -18,7 +18,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 
-<body class="multimedia">
+<body>
     <header>
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
@@ -133,26 +133,15 @@
         </div>
         <div class="row">
             <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
-                <img src="images/integrantes/jair.png" class="img-responsive image-acerca1" alt="Jair" />
+                <img src="images/integrantes/Anthony2.jpg" class="img-responsive image-acerca1" alt="Anthony" />
             </div>
             <div class="col-acercade1 col-xs-12 col-sm-6 info">
                 <div class="text-acercade4">
                     <p class="text-justify">
-                        <strong>3. Jair Sherrier: Guitarrista/Vocalista</strong>
+                        <strong>3. Anthony Wright: Trompetista</strong>
                     </p>
                     <p class="text-justify">
-                        Estudió guitarra clásica, contrabajo, teoría musical, orquestación y composición, pero
-                        creció escuchando Motown, Stax, Rock
-                        Clásico, Soca, Reggae, Ritmos Afrocubanos y
-                        afrocaribeños. Ha dirigido coros, bandas,
-                        escrito y producido para artistas, video, TV, y
-                        teatro; produjo la canción oficial para
-                        una campaña de las FAO de las Naciones
-                        Unidas. Su trabajo se ha escuchado en
-                        Norteamérica, Latinoamérica y en Estaciones
-                        de TV como CNN en español, Univisión,
-                        Telemundo, y en el Festival Internacional de
-                        las Artes de Costa Rica.
+                        Es estudiante intermedio desde el 2009 del Instituto Nacional de la Música, inició a los 9 años con flauta dulce, 3 años después se dedicó a la trompeta, actualmente es trompetista de la Orquesta y Banda Intermedia de Costa Rica y tuvo la experiencia de tocar en unos cuantos conciertos con la Orquesta Sinfónica Juvenil. Ha tocado en varios conjuntos con distintos estilos de música, desde el clásico hasta el popular, tocando por medio de conjuntos, o individualmente.  
                     </p>
                 </div>
             </div>            
