--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 
-<body class="multimedia">
+<body>
     <header>
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
@@ -111,7 +111,11 @@
     <main class="container informacion-index">
         <div class="row">
             <div class="col-xs-12 col3 text-center">
-                <h1>Adagio Gitano</h1>
+                <h1>Adagio Gitano</h1>                
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col3 text-center">
                 <h2>Próximos eventos</h2>
             </div>
         </div>
