--- a/multimedia.html
+++ b/multimedia.html
@@ -19,7 +19,7 @@
     <script src="js/multimedia.js"></script>
 </head>
 
-<body class="multimedia">
+<body>
     <header>
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
