se modifica el index.html para agregar un nuevo evento

--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
         </div>
         <div class="row">
             <div class="col col-xs-12 col-sm-6">
-                <img src="images/afiche/kandora.jpg" alt="Bar Kandora" class=" info-evento img-responsive">
+                <img src="images/afiche/korales.jpg" alt="Marisquería Los Kandora" class=" info-evento img-responsive">
                 <div class="text-center">
-                    <p><a href="https://goo.gl/maps/qBFkCDCm61D2"><strong>Ubicación</strong></a></p>    
+                    <p><a href="https://goo.gl/maps/qbVbQw3ZuAz"><strong>Ubicación</strong></a></p>    
                 </div>
             </div>
             <div class="col col-sm-6 hidden-xs">
                 <div class="info-evento-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d982.418724435223!2d-84.04923332720327!3d9.960983210333705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e45d40000001%3A0x3f367be812c8568d!2sKandora+Bar!5e0!3m2!1ses!2ses!4v1484617061633" frameborder="0" style="border:0" class="info-evento-map" allowfullscreen></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.655545520143!2d-84.0621605852061!3d9.962589692876827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e4f56944e42d%3A0x90433bfe1c13c8e!2sLos+Korales!5e0!3m2!1ses-419!2s!4v1486525997383" frameborder="0" style="border:0" class="info-evento-map" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
