se modifica la hoja de style.css, se modifica el index.html para el nuevo evento, se agrega images/afiche/tintosblancos.png

--- a/index.html
+++ b/index.html
@@ -121,7 +121,11 @@
         </div>
         <div class="row">
             <div class="col col-xs-12 col-sm-6">
-                <img src="images/afiche/tintosblancos.png" alt="Tintos y blancos" class="info-evento img-responsive">
+                <div class="afiche">
+                    <img src="images/afiche/tintosblancos.png" alt="Tintos y blancos" class="info-evento img-responsive">
+                </div>
+                
+                
                 <div class="text-center">
                     <p><a href="https://goo.gl/maps/DJzugZNnxg42"><strong>Ubicación</strong></a></p>    
                 </div>
