Se modifica la pantalla de acercade.html para agregar a Carolina como vocalista y remover.

--- a/acercade.html
+++ b/acercade.html
@@ -147,28 +147,18 @@
             </div>            
         </div>
         <div class="row">
-            <div class="col-acercade1 col-xs-12 col-sm-6 info">
+            <div class="col-acercade5 col-xs-12 col-sm-6 info">
                 <div class="text-acercade5">
                     <p class="text-justify">
-                        <strong>4. Yanelly Ramírez: Vocalista</strong>
+                        <strong>4. Carolina Figueroa Mesén</strong>
                     </p>
                     <p class="text-justify">
-                        Yanelly Ramírez Baltodano ha sido
-                        vocalista desde su infancia, desde
-                        coros estudiantiles hasta
-                        experiencias como solista en
-                        distintos medios musicales.
-                        Guitarrista y compositora empírica. A
-                        partir del 2011 estudió canto con Elsa
-                        Castro, graduada de la Universidad
-                        Nacional de Costa Rica. Vocalista
-                        desde el año 2015 en la agrupación
-                        Adagio Gitano.
+                       Descubrió el canto a las 16 años, cuando ingresó a un coro eclesiástico en donde aprendió herramientas básicas de canto. Su primera experiencia como vocalista principal fue a los 18 años, cuando fue invitada a formar parte de un grupo de música popular. Más adelante formó parte del coro de la universidad de Costa Rica durante un corto periodo. Ha cantado como vocalista principal en diversas agrupaciones musicales, cantando covers tanto en inglés como en español. Formó parte de una agrupación tributo a Pink Floyd ayudando como corista en la misma, fue invitada a formar parte de la primera presentación de la Orquesta de Humanidades de la Universidad de Costa Rica, realizada en el teatro Eugene O'Niel en el año 2015. Actualmente forma parte de varias agrupaciones como Adagio Gitano y el proyecto Inara como corista de este último.
                     </p>
                 </div>
             </div>
-            <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
-                <img src="images/integrantes/yanelly.png" class="img-responsive image-acerca1" alt="Yanelly" />
+            <div class="col-acercade5 col-xs-12 col-sm-6 hidden-xs">
+                <img src="images/integrantes/carolina.jpeg" class="img-responsive image-acerca5" alt="carolina" />
             </div>
         </div>
         <div class="row">
